--- a/application/views/employer/index.html
+++ b/application/views/employer/index.html
@@ -1,125 +1,62 @@
 <div id="page-wrapper">
-    <div class="row">
-        <div class="col-lg-12"><br>
-            {if ($opportunities == 0)}
-                <div class="alert alert-warning">Hi, {echo $user->name} you have not created any internship <a href="employer/create/internship">click here</a> to create or call +91-9891048495 we will do it for you.</div>
-            {/if}
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="panel panel-info" id="opportunities_posted">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-xs-6"><i class="fa fa-graduation-cap fa-5x"></i></div>
-                                <div class="col-xs-6 text-right">
-                                    <p class="announcement-heading huge">{echo $opportunities}</p>
-                                    <p class="announcement-text">Opportuniy!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <a href="employer/opportunities">
-                            <div class="panel-footer announcement-bottom">
-                                <div class="row">
-                                    <div class="col-xs-6">View All</div>
-                                    <div class="col-xs-6 text-right"><i class="fa fa-arrow-circle-right"></i></div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                
-                <div class="col-lg-4">
-                    <div class="panel panel-warning">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-xs-6"><i class="fa fa-fax fa-5x"></i></div>
-                                <div class="col-xs-6 text-right">
-                                    <p class="announcement-heading huge">{echo $applicants}</p>
-                                    <p class="announcement-text">Applicants</p>
-                                </div>
-                            </div>
-                        </div>
-                        <a href="employer/applicants">
-                            <div class="panel-footer announcement-bottom">
-                                <div class="row">
-                                    <div class="col-xs-6">View All</div>
-                                    <div class="col-xs-6 text-right"><i class="fa fa-arrow-circle-right"></i></div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+    <div class="row col-lg-12"><br>
 
-                <div class="col-lg-4">
-                    <div class="panel panel-danger">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-xs-6"><i class="fa fa-envelope fa-5x"></i></div>
-                                <div class="col-xs-6 text-right">
-                                    <p class="announcement-heading huge">{echo $messages}</p>
-                                    <p class="announcement-text">Messages!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <a href="employer/messages">
-                            <div class="panel-footer announcement-bottom">
-                                <div class="row">
-                                    <div class="col-xs-6">View All</div>
-                                    <div class="col-xs-6 text-right"><i class="fa fa-arrow-circle-right"></i></div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+        <div class="row">
+
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-line-chart"></i> Stats
+                    </a>
+                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-graduation-cap fa-2x"></i>Opportunity Posted <span class="badge">{echo $opportunities}</span></a>
+                    <a href="employer/applicants" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Student Applicantions <span class="badge">{echo $applicants}</span></a>
+                    <a href="employer/messages" class="list-group-item"><i class="fa fa-envelope fa-2x"></i>  Student Messages <span class="badge">{echo $messages}</span></a>
                 </div>
             </div>
 
-            <div class="row col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <i class="fa fa-bullhorn fa-fw"></i> Opportunity Reach
-                        <form class="pull-right" id="opportunities_analytics_form">
-                            <div class="input-prepend input-group">
-                                <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
-                                <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="" />
-                                <span class="input-group-btn">
-                                    <input type="submit" class="btn btn-default" value="Show!">
-                                </span>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="panel-body">
-                        <div id="opportunity_reach"></div>
-                    </div>
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-link"></i> Quick Links
+                    </a>
+                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-edit fa-2x"></i> Post Internship</a>
+                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-users fa-2x"></i>Add Team Members</a>
+                    <a href="employer/features" class="list-group-item"><i class="fa fa-check-circle fa-2x"></i> Add Features</a>
+                </div>
+            </div>
+            
+            <div class="col-lg-4">
+                <div class="list-group">
+                    <a class="list-group-item active text-center">
+                        <i class="fa fa-support"></i> Support
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=eFb62jX3WF4" target="_blank" class="list-group-item"><i class="fa fa-youtube-square fa-2x"></i>  How to Post Internship?</a>
+                    <a href="/faq" class="list-group-item"><i class="fa fa-question-circle fa-2x"></i>  FAQs</a>
+                    <a href="/contact" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Report a Problem</a>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="panel panel-success">
-                        <div class="panel-heading">
-                            Login Details
-                        </div>
-                        <div class="panel-body">
-                            <p>Last Login : {echo $user->last_login}</p>
-                            <p>Last Ip : {echo $user->last_ip}</p>
-                            <p>Number of Logins : {echo $user->login_number}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            Account Details
-                        </div>
-                        <div class="panel-body">
-                            <p>Created On : {echo $user->created}</p>
-                            <p>Updated On : {echo $user->updated}</p>
-                            <p>Type : {echo $user->type}</p>
-                        </div>
-                    </div>
-                </div>
+        </div>
 
+        <div class="row col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-bullhorn fa-fw"></i> Opportunity Reach
+                    <form class="pull-right" id="opportunities_analytics_form">
+                        <div class="input-prepend input-group">
+                            <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
+                            <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="" />
+                            <span class="input-group-btn">
+                                <input type="submit" class="btn btn-default" value="Show!">
+                            </span>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-body">
+                    <div id="opportunity_reach"></div>
+                </div>
             </div>
         </div>
-        <!-- /.col-lg-12 -->
+
     </div>
 </div>
