--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -22,7 +22,6 @@
     <link rel="icon" type="image/x-icon" href="{echo CDN}images/favicon.ico" />
     
     <title>{echo $seo->getTitle()}</title>
-    <base href="http://localhost/swiftintern/" />
     <!-- styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link href="{echo CDN}css/custom-1.0.css" rel="stylesheet" />
@@ -106,11 +105,11 @@
                 <h4><i class="fa fa-graduation-cap fa-lg"></i>SwiftIntern</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="about" class="whitetext">About</a></li>
-                    <li><a href="blog" class="whitetext">Intern Blog</a></li>
-                    <li><a href="termsofservice" class="whitetext">Terms of Use</a></li>
-                    <li><a href="privacy" class="whitetext">Privacy</a></li>
-                    <li><a href="contact" class="whitetext">Contact Us</a></li>
+                    <li><a href="/about" class="whitetext">About</a></li>
+                    <li><a href="/blog" class="whitetext">Intern Blog</a></li>
+                    <li><a href="/termsofservice" class="whitetext">Terms of Use</a></li>
+                    <li><a href="/privacy" class="whitetext">Privacy</a></li>
+                    <li><a href="/contact" class="whitetext">Contact Us</a></li>
                 </ul>
                 </nav>
             </div>
@@ -118,10 +117,10 @@
                 <h4><i class="fa fa-user fa-lg"></i> Students</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="student/register" class="whitetext">Register</a></li>
-                    <li><a href="resume-for-internship" class="whitetext">Resume for Internship</a></li>
-                    <li><a href="test" class="whitetext">Online Test</a></li>
-                    <li><a href="placement-papers" class="whitetext">See Placement Papers</a></li>
+                    <li><a href="/student/register" class="whitetext">Register</a></li>
+                    <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
+                    <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
+                    <li><a href="/placement-papers" class="whitetext">See Placement Papers</a></li>
                 </ul>
                 </nav>
             </div>
@@ -129,10 +128,10 @@
                 <h4><i class="fa fa-briefcase fa-lg"></i> Employers</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="employer/register" class="whitetext">Register your Company</a></li>
-                    <li><a href="employer/about" class="whitetext">About/Benefits</a></li>
-                    <li><a href="employer/create/internship" class="whitetext">Post Internship</a></li>
-                    <li><a href="companies" class="whitetext">Companies</a></li>
+                    <li><a href="/employer/register" class="whitetext">Register your Company</a></li>
+                    <li><a href="/employer/about" class="whitetext">About/Benefits</a></li>
+                    <li><a href="/employer/create/internship" class="whitetext">Post Internship</a></li>
+                    <li><a href="/organizations" class="whitetext">Companies</a></li>
                 </ul>
                 </nav>
             </div>
