--- a/application/views/home/internship.html
+++ b/application/views/home/internship.html
@@ -3,7 +3,6 @@
     <div class="row">
         <div class="col-xs-12 col-md-9 col-md-offset-1">
             <h1 class="page-header text-center" itemprop="title">
-                <span><i class="fa fa-institution"></i> <a href="organization/{echo $organization->name}/{echo $organization->id}" itemprop="hiringOrganization">{echo $organization->name}</a></span>
                 {echo $opportunity->title}
             </h1>
             <article itemscope itemtype="http://schema.org/JobPosting">
@@ -18,22 +17,19 @@
                     <div class="panel-body">
                         <div class="media">
                             <div class="col-md-6">
-                                <p><i class="fa fa-clock-o fa-fw"></i>Last Date : {echo $opportunity->last_date}</p>
-                                <p><i class="fa fa-map-marker fa-fw"></i>Location : <span itemprop="jobLocation">{echo $opportunity->location}</span></p>
+                                <p><i class="fa fa-map-marker"></i> <span itemprop="jobLocation">{echo $opportunity->location}</span></p>
+                                <p><i class="fa fa-institution"></i> <a href="organization/{echo $organization->name}/{echo $organization->id}" itemprop="hiringOrganization">{echo $organization->name}</a></p>
+                                <p><i class="fa fa-clock-o"></i> Apply before {echo $opportunity->last_date}</p>
                             </div>
                             <div class="col-md-6">
-                                <p><i class="fa fa-money fa-fw"></i>Stipend : <span itemprop="baseSalary">{echo $opportunity->payment}</span></p>
-                                <p><i class="fa fa-calendar fa-fw"></i>Duration : {echo $opportunity->duration}</p>
+                                <p><i class="fa fa-money"></i> Stipend : <span itemprop="baseSalary">{echo $opportunity->payment}</span></p>
+                                <p><i class="fa fa-calendar"></i> Duration : {echo $opportunity->duration}</p>
                             </div>
                             <meta itemprop="industry" content="{echo $opportunity->category}">
                         </div>
                         <hr>
-                        {if(isset($user) && ($user->type == 'student'))}
-                            <button id="apply_internship" data-opportunity="{echo $opportunity->id}" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Apply</button>
-                        {/if}
-                        {else}
-                            <a href="/login" class="btn btn-primary pull-right"><i class="fa fa-sign-in"></i> Login to Apply</a>
-                        {/else}
+                        <img class="pull-right" src="https://snap.licdn.com/microsites/content/dam/developer/global/en_US/site/img/apply-button.png">
+                        <!--<button id="apply_linkedin" class="btn btn-primary pull-right"><i class="fa fa-linkedin-square fa-2x"></i>   Apply With Linkedin</button>-->
                     </div>
                 </div>
 
