--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -8,16 +8,16 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Be sure to leave the brand out there if you want it shown -->
-            <a class="navbar-brand" href="home"><i class="fa fa-graduation-cap fa-lg"></i> SwiftIntern</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-graduation-cap fa-lg"></i> SwiftIntern</a>
         </div>
 
         <!-- post or upload cv -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                 <li><a href=""></a></li>
-                <li><a href="resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
-                <li><a href="onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Online Test</a></li>
-                <li><a href="placement-papers" class="whitetext"><i class="fa fa-files-o fa-lg"></i> Placement Papers</a></li>
+                <li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
+                <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Online Test</a></li>
+                <li><a href="/placement-papers" class="whitetext"><i class="fa fa-files-o fa-lg"></i> Placement Papers</a></li>
             </ul>
             <!-- the menu -->
             <div class="navbar-right">
@@ -27,12 +27,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i> {$user->name} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="student/applications">Applied</a></li>
-                            <li><a href="student/recommends">Recommended</a></li>
-                            <li><a href="student">My Profile</a></li>
+                            <li><a href="/student/applications">Applied</a></li>
+                            <li><a href="/student/recommends">Recommended</a></li>
+                            <li><a href="/student">My Profile</a></li>
                             <li class="divider"></li>
-                            <li><a href="student/resumes">Resume</a></li>
-                            <li><a href="logout">Logout</a></li>
+                            <li><a href="/student/resumes">Resume</a></li>
+                            <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
                     {/if}
@@ -41,12 +41,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-check-square fa-lg"></i> Sign Up <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="student/register"><i class="fa fa-user fa-lg"></i> Student</a></li>
+                            <li><a href="/student/register"><i class="fa fa-user fa-lg"></i> Student</a></li>
                             <li class="divider"></li>
-                            <li><a href="employer/register" class="whitetext"><i class="fa fa-briefcase fa-lg"></i> Employer</a></li>
+                            <li><a href="/employer/register" class="whitetext"><i class="fa fa-briefcase fa-lg"></i> Employer</a></li>
                         </ul>
                     </li>
-                    <li><a href="login" class="whitetext"><i class="fa fa-sign-in fa-lg"></i> Sign In</a></li>
+                    <li><a href="/login" class="whitetext"><i class="fa fa-sign-in fa-lg"></i> Sign In</a></li>
                     {/else}
 
                 </ul>
