--- a/application/views/home/login.html
+++ b/application/views/home/login.html
@@ -8,32 +8,10 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <p>
-                        <button class="btn btn-danger googlelogin"><i class="fa fa-google-plus fa-lg"></i>  | Signin with Google</button> 
-                        <b>--OR--</b> 
-                        Login below with your email address:
+                        <a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Signin with Linkedin</a> 
+                        <p>Your Profile will be synced with linkedin</p>
                     </p>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <form role="form" id="loginform" method="post" class="panel-body">
-                    <div class="form-group">
-                        <label>E-mail</label>
-                        <input type="email" class="form-control" placeholder="E-mail" name="email">
-                        {if isset($email_error)}
-                        {echo $email_error}
-                        {/if}
-                    </div>
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" placeholder="Password" name="password">
-                        {if isset($password_error)}
-                        {echo $password_error}
-                        {/if}
-                    </div>
-                    <input type="hidden" name="action" value="login"><hr>
-                    <button type="button" name="mail" value="forgetpassword" class="btn btn-warning btn-xs">Forgot Password?</button>
-                    <button type="submit" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Login</button>
-                </form>
             </div>
         </div>
     </div>
