Student Navigation Improved

--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -97,12 +97,11 @@
                 <h4><i class="fa fa-graduation-cap fa-lg"></i>SwiftIntern</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="about" class="whitetext">About</a></li>
-                    <li><a href="blog" class="whitetext">Intern Blog</a></li>
-                    <li><a href="termsofservice" class="whitetext">Terms of Use</a></li>
-                    <li><a href="privacy" class="whitetext">Privacy</a></li>
-                    <li><a href="categories" class="whitetext">Sitemap</a></li>
-                    <li><a href="contact" class="whitetext">Contact Us</a></li>
+                    <li><a href="/about" class="whitetext">About</a></li>
+                    <li><a href="/blog" class="whitetext">Intern Blog</a></li>
+                    <li><a href="/termsofservice" class="whitetext">Terms of Use</a></li>
+                    <li><a href="/privacy" class="whitetext">Privacy</a></li>
+                    <li><a href="/contact" class="whitetext">Contact Us</a></li>
                 </ul>
                 </nav>
             </div>
@@ -110,12 +109,11 @@
                 <h4><i class="fa fa-user fa-lg"></i> Students</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="student/register" class="whitetext">Register</a></li>
-                    <li><a href="student/recommends" class="whitetext">Apply Internships</a></li>
-                    <li><a href="resume-for-internship" class="whitetext">Resume for Internship</a></li>
-                    <li><a href="test" class="whitetext">Online Test</a></li>
-                    <li><a href="placement-papers" class="whitetext">See Placement Papers</a></li>
-                    <li><a href="books" class="whitetext">Suggested Books</a></li>
+                    <li><a href="/student/register" class="whitetext">Register</a></li>
+                    <li><a href="/student/recommends" class="whitetext">Apply Internships</a></li>
+                    <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
+                    <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
+                    <li><a href="/placement-papers" class="whitetext">See Placement Papers</a></li>
                 </ul>
                 </nav>
             </div>
@@ -123,11 +121,11 @@
                 <h4><i class="fa fa-fax fa-lg"></i> Internships</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="internship-in-delhi" class="whitetext">Internship in Delhi</a></li>
-                    <li><a href="software-internship" class="whitetext">Internship for Computer</a></li>
-                    <li><a href="deisgn-internship" class="whitetext">Designing Internship</a></li>
-                    <li><a href="marketing-sales-internship" class="whitetext">Marketing Internship</a></li>
-                    <li><a href="internship-for-law-students" class="whitetext">Internship for Law</a></li>
+                    <li><a href="/internship-in-delhi" class="whitetext">Internship in Delhi</a></li>
+                    <li><a href="/software-internship" class="whitetext">Internship for Computer</a></li>
+                    <li><a href="/deisgn-internship" class="whitetext">Designing Internship</a></li>
+                    <li><a href="/marketing-sales-internship" class="whitetext">Marketing Internship</a></li>
+                    <li><a href="/internship-for-law-students" class="whitetext">Internship for Law</a></li>
                 </ul>
                 </nav>
             </div>
