--- a/application/views/layouts/navigation/student.html
+++ b/application/views/layouts/navigation/student.html
@@ -8,16 +8,16 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Be sure to leave the brand out there if you want it shown -->
-            <a class="navbar-brand" href="home"><i class="fa fa-graduation-cap fa-lg"></i> SwiftIntern</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-graduation-cap fa-lg"></i> SwiftIntern</a>
         </div>
 
         <!-- post or upload cv -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                 <li><a href=""></a></li>
-                <li><a href="students/resumes" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Resume</a></li>
-                <li><a href="students/applications" class="whitetext"><i class="fa fa-check-square fa-lg"></i> Applications</a></li>
-                <li><a href="students/messages" class="whitetext"><i class="fa fa-envelope fa-lg"></i> Messages</a></li>
+                <li><a href="/students/resumes" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Resume</a></li>
+                <li><a href="/students/applications" class="whitetext"><i class="fa fa-check-square fa-lg"></i> Applications</a></li>
+                <li><a href="/students/messages" class="whitetext"><i class="fa fa-envelope fa-lg"></i> Messages</a></li>
                 <!--<li><a href="students/profile" class="whitetext"><i class="fa fa-male fa-lg"></i> Profile</a></li>-->
                 <!--<li><a href="students/recommends" class="whitetext"><i class="fa fa-tags fa-lg"></i> Recommended</a></li>-->
             </ul>
@@ -27,9 +27,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-user fa-lg"></i> {echo $user->name;} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="students/settings">Settings</a></li>
+                            <li><a href="/students/settings">Settings</a></li>
                             <li class="divider"></li>
-                            <li><a href="logout">Logout</a></li>
+                            <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
