Channge Login and register Method

--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -54,7 +54,7 @@
                             <li><a href="/employer/register" class="whitetext"><i class="fa fa-briefcase fa-lg"></i> Employer</a></li>
                         </ul>
                     </li>
-                    <li><a href="/login" class="whitetext"><i class="fa fa-sign-in fa-lg"></i> Sign In</a></li>
+                    <li><a onclick="login();" class="whitetext"><i class="fa fa-linkedin-square fa-lg"></i> Sign In</a></li>
                     {/else}
 
                 </ul>
