--- a/application/views/home/internship.html
+++ b/application/views/home/internship.html
@@ -18,7 +18,7 @@
                         <div class="media">
                             <div class="col-md-6">
                                 <p><i class="fa fa-map-marker"></i> <span itemprop="jobLocation">{echo $opportunity->location}</span></p>
-                                <p><i class="fa fa-institution"></i> <a href="organization/{echo $organization->name}/{echo $organization->id}" itemprop="hiringOrganization">{echo $organization->name}</a></p>
+                                <p><i class="fa fa-institution"></i> <a href="/organization/{echo $organization->name}/{echo $organization->id}" itemprop="hiringOrganization">{echo $organization->name}</a></p>
                                 <p><i class="fa fa-clock-o"></i> Apply before {echo $opportunity->last_date}</p>
                             </div>
                             <div class="col-md-6">
@@ -28,8 +28,12 @@
                             <meta itemprop="industry" content="{echo $opportunity->category}">
                         </div>
                         <hr>
-                        <img class="pull-right" src="https://snap.licdn.com/microsites/content/dam/developer/global/en_US/site/img/apply-button.png">
-                        <!--<button id="apply_linkedin" class="btn btn-primary pull-right"><i class="fa fa-linkedin-square fa-2x"></i>   Apply With Linkedin</button>-->
+                        {if(isset($user))}
+                            <button id="apply_linkedin" class="btn btn-primary pull-right"><i class="fa fa-check-circle fa-lg"></i> Apply</button>
+                        {/if}
+                        {else}
+                            <button onclick="login()" class="btn btn-primary pull-right"><i class="fa fa-linkedin fa-lg"></i>  | Apply with Linkedin</button>
+                        {/else}
                     </div>
                 </div>
 
