Student Panel Completed

--- a/application/views/home/internship.html
+++ b/application/views/home/internship.html
@@ -29,7 +29,7 @@
                         </div>
                         <hr>
                         {if(isset($user))}
-                            <button id="apply_linkedin" class="btn btn-primary pull-right"><i class="fa fa-check-circle fa-lg"></i> Apply</button>
+                            <button id="apply_internship" class="btn btn-primary pull-right"><i class="fa fa-check-circle fa-lg"></i> Apply</button>
                         {/if}
                         {else}
                             <button onclick="login()" class="btn btn-primary pull-right"><i class="fa fa-linkedin fa-lg"></i>  | Apply with Linkedin</button>
