--- a/application/views/employer/register.html
+++ b/application/views/employer/register.html
@@ -1,12 +1,11 @@
 <section class="container">
     <div class="row">
         <h1 class="page-header text-center">Hire Quality Interns</h1>
-        <ol class="breadcrumb">
-            <li><a href="home">Home</a></li>
-            <li><a href="employer/about">Employer</a></li>
-            <li class="active">SignUp</li>
-        </ol>
-        <div class="col-md-6"><br>
+        {if(isset($message))}
+            <div class="alert alert-danger" role="alert">{echo $message}</div>
+        {/if}
+        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Register with Linkedin</a></p>
+        <div class="col-md-8 col-md-offset-2 panel panel-default panel-body">
             <div class="media">
                 <div class="media-left">
                     <i class="fa fa-check-circle fa-5x"></i>
@@ -58,101 +57,5 @@
             </div>
             <br>
         </div>
-        <form method="POST" enctype="multipart/form-data" action="" class="col-md-6">
-            <legend>Employer Details</legend>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-user"></i> Full Name</label>
-                        <input type="text" name="name" class="form-control" required="">
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-envelope"></i> E-mail</label>
-                        <input type="email" name="email" class="form-control" placeholder="eg. person@company.com" required="">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-key"></i> Password</label>
-                        <input type="password" id="password" name="password" class="form-control" required="">
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-mobile"></i> Mobile</label>
-                        <input type="tel" name="phone" class="form-control" required="">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-linkedin"></i> LinkedIn Profile Url (Optional)</label>
-                        <input type="text" name="linkedin" class="form-control">
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-bookmark"></i> Designation</label>
-                        <input type="text" name="designation" class="form-control" placeholder="eg. Founder, HR, CEO" required="">
-                    </div>
-                </div>
-            </div>
-            <legend>Company/Organization Details</legend>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-bank"></i> Company Name</label>
-                        <input type="text" name="organization" list="company_name" class="form-control" autocomplete="off" required="">
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-at"></i> Website</label>
-                        <input type="text" name="website" class="form-control" value="http://">
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-facebook-square"></i> Company Facebook Page(Optional)</label>
-                        <input type="text" name="fbpage" class="form-control" placeholder="https://www.facebook.con/yourcompany">
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-globe"></i> Country</label>
-                        <input type="text" name="country" class="form-control" value="India">
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-image"></i> Company Logo <small>(Less than 1 MB)</small></label>
-                        <input type="file" id="imageInput" name="photo" class="form-control" required="">
-                        <div id="output"></div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <div class="form-group">
-                        <label for=""><i class="fa fa-at"></i> Sector</label>
-                        <select name="sector" class="form-control" required="">
-                            {include employer/sector.html}
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <input type="hidden" name="action" value="employer_register">
-            <button type="submit" class="btn btn-primary"><i class="fa fa-check-circle"></i> Register</button>
-        </form>
     </div>
 </section>
