--- a/application/views/students/register.html
+++ b/application/views/students/register.html
@@ -1,8 +1,8 @@
 <section class="container">
     <div class="row">
         <h1 class="page-header text-center">Get Experience | Add Value to your CV</h1>
-        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Signin with Linkedin</a></p>
-        <div class="col-md-10 col-lg-offset-1">
+        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Register with Linkedin</a></p>
+        <div class="col-md-8 col-lg-offset-2 panel panel-default panel-body">
             <div class="media">
                 <div class="media-left">
                     <i class="fa fa-graduation-cap fa-4x"></i>
