Employer Internship update

--- a/application/views/employer/index.html
+++ b/application/views/employer/index.html
@@ -8,7 +8,7 @@
                     <a class="list-group-item active text-center">
                         <i class="fa fa-line-chart"></i> Stats
                     </a>
-                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-graduation-cap fa-2x"></i>Opportunity Posted <span class="badge">{echo $opportunities}</span></a>
+                    <a href="employer/internships" class="list-group-item"><i class="fa fa-graduation-cap fa-2x"></i>Opportunity Posted <span class="badge">{echo $opportunities}</span></a>
                     <a href="employer/applicants" class="list-group-item"><i class="fa fa-fax fa-2x"></i>  Student Applicantions <span class="badge">{echo $applicants}</span></a>
                     <a href="employer/messages" class="list-group-item"><i class="fa fa-envelope fa-2x"></i>  Student Messages <span class="badge">{echo $messages}</span></a>
                 </div>
@@ -19,9 +19,8 @@
                     <a class="list-group-item active text-center">
                         <i class="fa fa-link"></i> Quick Links
                     </a>
-                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-edit fa-2x"></i> Post Internship</a>
-                    <a href="employer/opportunities" class="list-group-item"><i class="fa fa-users fa-2x"></i>Add Team Members</a>
-                    <a href="employer/features" class="list-group-item"><i class="fa fa-check-circle fa-2x"></i> Add Features</a>
+                    <a href="employer/postinternship" class="list-group-item"><i class="fa fa-edit fa-2x"></i> Post Internship</a>
+                    <a href="employer/features" class="list-group-item disabled"><i class="fa fa-plug fa-2x"></i> Add Features(Coming Soon)</a>
                 </div>
             </div>
             
