--- a/application/views/employer/reach.html
+++ b/application/views/employer/reach.html
@@ -1,18 +1,18 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Opportunity Analytics <small>(Internship, Competition, etc)</small></h1>
+            <h1 class="page-header text-center">Internship Analytics</h1>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <form class="form-inline" role="form" id="opportunity_analytics_form">
+            <form class="form-inline text-center" role="form" id="opportunity_analytics_form">
                 <div class="form-group">
                     <div class="input-group">
                         <label class="sr-only">Opportunity</label>
                         <select name="opportunity_id" class="form-control">
                             {foreach $opportunity in $opportunities}
-                                <option value="{echo $opportunity->id}">{echo $opportunity->title}</option>
+                            <option value="{echo $opportunity->id}">{echo $opportunity->title}</option>
                             {/foreach}
                         </select>
                     </div>
@@ -31,10 +31,12 @@
                 <div class="panel-heading">
                     <i class="fa fa-bullhorn fa-fw"></i> Reach
                 </div>
-                <div class="panel-body">
+                <div class="panel-body text-center">
                     <div id="opportunity_reach">Select an opportunity and date range and then click on view analytics button to show details.</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
