--- a/application/views/layouts/navigation/employer.html
+++ b/application/views/layouts/navigation/employer.html
@@ -30,7 +30,7 @@
 <nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
         <ul class="nav" id="side-menu">
-            <li><a href="employer/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
+            <li><a href="/employer"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
             <li>
                 <a href="#"><i class="fa fa-user fa-fw"></i> Profile<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
@@ -48,16 +48,16 @@
             <li>
                 <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> My Internships<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="/employer/createinternship">Create</a></li>
-                    <li><a href="/employer/opportunities">Manage</a></li>
+                    <li><a href="/employer/postinternship">Create</a></li>
+                    <li><a href="/employer/internship">Manage</a></li>
                     <li><a href="/employer/applicants">Applicants</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Analytics<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
-                    <li><a href="employer/followers">Followers</a></li>
-                    <li><a href="employer/reach">Reach</a></li>
+                    <li><a href="/employer/followers">Followers</a></li>
+                    <li><a href="/employer/reach">Reach</a></li>
                 </ul>
             </li>
             <li><a href="/employer/messages"><i class="fa fa-envelope fa-fw"></i> Messages</a></li>
